--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/pomonahci/EyeWrite#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "firepad": "^1.5.10",
     "grunt-cli": "^1.3.2",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1"
   }
