--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/pomonahci/EyeWrite#readme",
   "dependencies": {
+    "codemirror": "^5.55.0",
     "express": "^4.17.1",
     "grunt-cli": "^1.3.2",
     "request": "^2.88.2",
