--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/pomonahci/EyeWrite#readme",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "codemirror": "^5.55.0",
     "express": "^4.17.1",
     "grunt-cli": "^1.3.2",
+    "jquery": "^3.5.1",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1"
