--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/pomonahci/EyeWrite#readme",
   "dependencies": {
+    "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
     "bootstrap": "^4.5.0",
     "codemirror": "^5.55.0",
     "express": "^4.17.1",
