--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.5.1",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
-    "socket.io-stream": "^0.9.1"
+    "socket.io-stream": "^0.9.1",
+    "webgazer": "pomonahci/WebGazer#master"
   }
 }
