--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
-    "webgazer": "brownhci/WebGazer#master"
+    "webgazer": "github:brownhci/WebGazer#master"
   }
 }
