--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
+    "popper.js": "^1.16.1",
+    "sweetalert": "^2.1.2",
     "webgazer": "github:brownhci/WebGazer#master"
   }
 }
