--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
     "popper.js": "^1.16.1",
-    "sweetalert": "^2.1.2",
-    "webgazer": "github:brownhci/WebGazer#master"
+    "sweetalert": "^2.1.2"
   }
 }
