--- a/package.json
+++ b/package.json
@@ -24,16 +24,10 @@
   },
   "homepage": "https://github.com/pomonahci/EyeWrite#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
     "codemirror": "^5.55.0",
-    "express": "^4.17.1",
-    "grunt-cli": "^1.3.2",
-    "jquery": "^3.5.1",
-    "request": "^2.88.2",
-    "socket.io": "^2.3.0",
-    "socket.io-stream": "^0.9.1",
-    "popper.js": "^1.16.1",
-    "sweetalert": "^2.1.2"
+    "express": "^4.17.1"
   }
 }
