--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "bootstrap": "^4.5.0",
     "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
     "codemirror": "^5.55.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jquery": "^1.9.1",
+    "peerjs": "^1.3.1",
+    "popper.js": "^1.16.1"
   }
 }
