--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
     "codemirror": "^5.55.0",
+    "distinct-colors": "^3.0.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "peerjs": "^1.3.1",
