--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A collaborative document editor that supports gaze sharing",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
+    "chroma-js": "^2.1.1",
     "codemirror": "^5.55.0",
     "distinct-colors": "^3.0.0",
     "express": "^4.17.1",
