webgazer commit attempt2

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "WebGazer"]
-	path = WebGazer
-	url = https://github.com/pomonahci/WebGazer.git
+# [submodule "WebGazer"]
+# 	path = WebGazer
+# 	url = https://github.com/pomonahci/WebGazer.git
