--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "codemirror": "^5.61.1",
     "distinct-colors": "^3.0.0",
     "express": "^4.17.1",
+    "heatmap.js": "^2.0.5",
     "jquery": "^3.6.0",
     "peerjs": "^1.3.1",
     "popper.js": "^1.16.1"
