--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collaborative document editor that supports gaze sharing",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "browser-sync start --server --files '*'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,11 +29,13 @@
     "bootstrap": "^4.5.0",
     "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
     "chroma-js": "^2.1.1",
-    "codemirror": "^5.55.0",
+    "codemirror": "^5.61.1",
     "distinct-colors": "^3.0.0",
     "express": "^4.17.1",
+    "heatmap.js": "^2.0.5",
     "jquery": "^3.6.0",
     "peerjs": "^1.3.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "devDependencies": {}
 }
