--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "bootstrap-multiselect": "davidstutz/bootstrap-multiselect#master",
     "chroma-js": "^2.1.1",
     "codemirror": "^5.61.1",
+    "dgram": "^1.0.1",
     "distinct-colors": "^3.0.0",
     "express": "^4.17.1",
     "heatmap.js": "^2.0.5",
     "jquery": "^3.6.0",
     "peerjs": "^1.3.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "simple-socket-stream": "^0.2.0",
+    "socket.io": "^2.1.1",
+    "socket.io-stream": "^0.9.1"
   },
   "devDependencies": {}
 }
