--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jquery": "^3.6.0",
     "peerjs": "^1.3.1",
     "popper.js": "^1.16.1",
+    "request": "^2.88.2",
     "simple-socket-stream": "^0.2.0",
     "socket.io": "^2.1.1",
     "socket.io-stream": "^0.9.1"
